--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="manifest.json" />
     <title>Balanced Network Interface</title>
-    <link href="static/css/5.107dc6bf.chunk.css" rel="stylesheet" />
+    <link href="static/css/5.d18e2f67.chunk.css" rel="stylesheet" />
   </head>
-
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
@@ -35,7 +34,6 @@
           for (s && s(t); d.length; ) d.shift()();
           return c.push.apply(c, f || []), r();
         }
-
         function r() {
           for (var e, t = 0; t < c.length; t++) {
             for (var r = c[t], n = !0, o = 1; o < r.length; o++) {
@@ -47,21 +45,12 @@
           return e;
         }
         var n = {},
-          o = {
-            4: 0,
-          },
-          a = {
-            4: 0,
-          },
+          o = { 4: 0 },
+          a = { 4: 0 },
           c = [];
-
         function u(t) {
           if (n[t]) return n[t].exports;
-          var r = (n[t] = {
-            i: t,
-            l: !1,
-            exports: {},
-          });
+          var r = (n[t] = { i: t, l: !1, exports: {} });
           return e[t].call(r.exports, r, r.exports, u), (r.l = !0), r.exports;
         }
         (u.e = function (e) {
@@ -69,10 +58,7 @@
           o[e]
             ? t.push(o[e])
             : 0 !== o[e] &&
-              {
-                8: 1,
-                9: 1,
-              }[e] &&
+              { 6: 1, 9: 1 }[e] &&
               t.push(
                 (o[e] = new Promise(function (t, r) {
                   for (
@@ -84,10 +70,10 @@
                           0: "31d6cfe0",
                           1: "31d6cfe0",
                           2: "31d6cfe0",
-                          6: "31d6cfe0",
+                          6: "c203f355",
                           7: "31d6cfe0",
-                          8: "e2450a13",
-                          9: "7d50f0fe",
+                          8: "31d6cfe0",
+                          9: "1725e0ed",
                           10: "31d6cfe0",
                           11: "31d6cfe0",
                           12: "31d6cfe0",
@@ -154,15 +140,15 @@
                     ({}[e] || e) +
                     "." +
                     {
-                      0: "f1c2b97c",
-                      1: "c0da2f9a",
-                      2: "928f2123",
-                      6: "d1027491",
-                      7: "4143847c",
-                      8: "c91a6f41",
-                      9: "aa69d87e",
-                      10: "b485cc69",
-                      11: "cdb01703",
+                      0: "f1647178",
+                      1: "bb9b88ae",
+                      2: "a196a663",
+                      6: "2f72247d",
+                      7: "86068794",
+                      8: "469f06fc",
+                      9: "4845bb66",
+                      10: "cfdbdc99",
+                      11: "9b7da342",
                       12: "fc76751d",
                     }[e] +
                     ".chunk.js"
@@ -193,10 +179,7 @@
                 }
               };
               var l = setTimeout(function () {
-                c({
-                  type: "timeout",
-                  target: i,
-                });
+                c({ type: "timeout", target: i });
               }, 12e4);
               (i.onerror = i.onload = c), document.head.appendChild(i);
             }
@@ -206,20 +189,13 @@
           (u.c = n),
           (u.d = function (e, t, r) {
             u.o(e, t) ||
-              Object.defineProperty(e, t, {
-                enumerable: !0,
-                get: r,
-              });
+              Object.defineProperty(e, t, { enumerable: !0, get: r });
           }),
           (u.r = function (e) {
             "undefined" != typeof Symbol &&
               Symbol.toStringTag &&
-              Object.defineProperty(e, Symbol.toStringTag, {
-                value: "Module",
-              }),
-              Object.defineProperty(e, "__esModule", {
-                value: !0,
-              });
+              Object.defineProperty(e, Symbol.toStringTag, { value: "Module" }),
+              Object.defineProperty(e, "__esModule", { value: !0 });
           }),
           (u.t = function (e, t) {
             if ((1 & t && (e = u(e)), 8 & t)) return e;
@@ -227,10 +203,7 @@
             var r = Object.create(null);
             if (
               (u.r(r),
-              Object.defineProperty(r, "default", {
-                enumerable: !0,
-                value: e,
-              }),
+              Object.defineProperty(r, "default", { enumerable: !0, value: e }),
               2 & t && "string" != typeof e)
             )
               for (var n in e)
@@ -270,7 +243,7 @@
         r();
       })([]);
     </script>
-    <script src="static/js/5.6b5514fd.chunk.js"></script>
-    <script src="static/js/main.80ef2443.chunk.js"></script>
+    <script src="static/js/5.0cee5169.chunk.js"></script>
+    <script src="static/js/main.c0044125.chunk.js"></script>
   </body>
 </html>
